# real-time-tweet-classification

./: DEV_PLAN.md  README.md  docker-compose.yml  docker_run_kafka.sh  kafka-docker-compose.yml  local_run.sh
classification_service/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  server.sh
classification_service/src/: config.py  logger.py  main.py  models.py
classification_service/src/model_api/: inferencer.py  labels.py  loader.py  preprocessor.py  test_inferencer.py
classification_service/src/model_api/common/: labels.py  preprocessor.py
classification_service/src/model_api/distil-bert/: README.md  model.py
classification_service/src/model_api/models/: base.py
classification_service/src/model_api/models/distil_bert/: model.py
classification_service/src/pub_sub/publisher/: create_publisher.py  kafka_pub.py  publisher.py  redis_pub.py
classification_service/src/pub_sub/subscriber/: create_subscriber.py  kafka_sub.py  redis_sub.py  subscriber.py
ingestion_service/: .env.example  .gitignore  DEV_PLAN.md  Dockerfile  README.md  build_redis_server.sh  client.sh  docker-compose.yml  docker_run.sh  entrypoint.sh  go.mod  go.sum  mock_server.sh
ingestion_service/src/: config.go  main.go  stream.go
ingestion_service/src/client/: client.go  stream.go
ingestion_service/src/config/: config.go
ingestion_service/src/mock_x_api/: .env.example  mock_api.go
ingestion_service/src/publisher/: kafka_pub.go  publisher.go  redis_pub.go
kafka/: build_kafka_server.sh  docker-compose.yml
storage_service/: .env.example  .gitignore  DEV_PLAN.md  Dockerfile  README.md  pyproject.toml  run.sh
storage_service/src/: config.py  logger.py  main.py  mongo.py
storage_service/src/subscriber/: create_subscriber.py  kafka_sub.py  redis_sub.py  subscriber.py
visualization_service/: README.md
