[tool.poetry]
name = "classification-service"
version = "0.1.0"
description = ""
authors = ["Monkin <monkinsmurf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.116.1"}
kafka-python = "^2.2.15"
redis = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
