[project]
name = "storage-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Monkin",email = "monkinsmurf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymongo[srv] (>=4.14.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false 

