[project]
name = "storage-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Monkin",email = "monkinsmurf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymongo[srv] (>=4.14.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "redis (>=6.4.0,<7.0.0)",
    "kafka-python (>=2.2.15,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false 

